--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "author": "alphasec",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^5.10.2",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "prisma": "^5.10.2"
   },
   "scripts": {
     "start": "node index.js",
     "dev": "ts-node-dev --transpile-only src/server.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
